# NeuralNetFramework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: UpdateSubmodules.cmake
example_data/: iris_test.csv  iris_train.csv
include/nnf/matrix/: matrix.h
include/nnf/network/: activations.h  costs.h  network.h
include/nnf/utils/: dataset.h  file_reader.h  file_writer.h
src/: CMakeLists.txt
src/matrix/: matrix.cpp
src/network/: activations.cpp  costs.cpp  network.cpp
src/utils/: dataset.cpp  exception.cpp  file_reader.cpp  file_writer.cpp
tests/: CMakeLists.txt  test_activations.cpp  test_dataset.cpp  test_file_reader.cpp  test_matrix.cpp  test_network.cpp  tests.cpp
